examples/test/testpolicy13070.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13070
  namespace: namespace288
spec:
  podSelector:
    matchLabels:
      key9: value13
      key14: value31
      key5: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value5
      podSelector:
        matchLabels:
          key35: value34
          key39: value26
